discussion/kv_engine/182436/182436_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53304: Enforce holding of stateLock in VBucket::queueItem [10/n]

MB-53304 suggests we ensure that the stateLock is held by passing a ref
to it in queueItem (and the call hierarchy of queueItem).

This change makes fetchValidValue and its callers pass down the lock on
the vbucket state.

In a future change I will pass this ref down to queueItem.

Change-Id: I81d1d78a1758421f30a92f3b8c021d5d646bdec8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-11-08 09:57:45.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-08 10:06:01.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50974/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50974/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25001/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25001/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11449/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11449/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23205/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23205/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32187/ : ABORTED

Failure of GoogleTest "TransportProtocols/ArithmeticTest.TestBasicArithmetic_1/McbpSsl_XattrNo_JsonNo_SnappyNo":

<pre>
[ RUN      ] TransportProtocols/ArithmeticTest.TestBasicArithmetic_1/McbpSsl_XattrNo_JsonNo_SnappyNo
[2022-11-08T10:05:34.495Z] unknown file: Failure
[2022-11-08T10:05:34.495Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-11-08T10:05:34.495Z] [  FAILED  ] TransportProtocols/ArithmeticTest.TestBasicArithmetic_1/McbpSsl_XattrNo_JsonNo_SnappyNo, where GetParam() = (McbpSsl, XattrNo, 4-byte object <01-00 00-00>, 4-byte object <01-00 00-00>) (79 ms)
TransportProtocols/ArithmeticTest.TestBasicArithmetic_1/McbpSsl_XattrNo_JsonNo_SnappyNo
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32187/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32187/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42782/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:172:18:
error: unknown type name "VBucketStateLockRef"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42782/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21723/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:150:34: error: out-of-line definition of "get" does not match any declaration in "RangeScanCacheCallback" [clang-diagnostic-error]
GetValue RangeScanCacheCallback::get(
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:172:18: error: unknown type name "VBucketStateLockRef" [clang-diagnostic-error]
    GetValue get(VBucketStateLockRef vbStateLock,
                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21723/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:150:34:
error: out-of-line definition of "get" does not match any declaration in "RangeScanCacheCallback" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21723/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/470/ : FAILURE

Compile error at [2022-11-08T10:00:48.246Z] ../kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:172:18:
error: ?VBucketStateLockRef? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/470/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11540/ : FAILURE

Compile error at [2022-11-08T10:03:32.867Z] ../kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:172:18:
error: ?VBucketStateLockRef? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11540/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24174/ : FAILURE

Compile error at [2022-11-08T10:01:14.883Z] ../kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:172:18:
error: ?VBucketStateLockRef? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24174/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23765/ : FAILURE

Compile error at [2022-11-08T10:00:20.968Z] ../kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:172:18:
error: ?VBucketStateLockRef? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23765/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21003/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
